upd: answer dto
